Fix HTML syntax and formatting issues

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 			<br>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdAqgL054UT1IRoXSGKtRmu0db4kwDsJRKTMyQEVvQ2SGV4sA/viewform?usp=publish-editor">Dev 1 Feedback </a>
 			<br>
-			<a> href="resources/paintingColorMix/game.html" target="_blank">Dev 3: Color Mixer 2.0: Drawing </a>
+			<a href="resources/paintingColorMix/game.html" target="_blank">Dev 3: Color Mixer 2.0: Drawing </a>
 		</p>
 		
 	</body>
 
 </html>
+
 
 
 
